[metadata]
name = tacl
version = 5.0.5
author = Jamie Norrish
author_email = jamie@artefact.org.nz
url = https://github.com/ajenhl/tacl
project_urls =
    Documentation = http://tacl.readthedocs.io/en/latest/
description = Text analyser for corpus linguistics
long_description = file: README.rst
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
install_requires =
    biopython
    colorlog
    Jinja2
    lxml
    pandas

[options.package_data]
tacl = assets/results_highlight/*.js, assets/templates/*.html, assets/xslt/*.xsl

[options.entry_points]
console_scripts =
    tacl = tacl.__main__:main

[options.packages.find]
exclude =
    docs*
    tests*